removed problems